# cli.mail.app

./: .gitignore  CLAUDE.md  README.md  TEST_PROMPT.md  pyproject.toml
docs/: product-spec.md
harness-state/: config.json  handoff.json  product-spec.md  progress.md  sprint-plan.json  status.json
harness-state/regression/: registry.json
harness-state/sprints/sprint-01/: contract-proposal.json  contract-review.json  eval-report.json  generator-log.md  status.json
harness-state/sprints/sprint-02/: contract-review.json  contract.json  eval-report.json  generator-log.md  status.json
harness-state/sprints/sprint-03/: contract-review.json  contract.json  eval-report.json  generator-log.md  status.json
harness-state/sprints/sprint-04/: contract-review.json  contract.json  eval-report.json  generator-log.md  status.json
harness-state/sprints/sprint-05/: contract-review.json  contract.json  generator-log.md  status.json
harness-state/sprints/sprint-06/: contract-review.json  contract.json  eval-report.json  (+2 more)
scripts/: bump-patch.sh
skills/mailctl/: SKILL.md
src/mailctl/: __init__.py  account_map.py  cli.py  emlx_reader.py  engine.py  errors.py  message_lookup.py  output.py  sqlite_engine.py
tests/: conftest.py
tests/regression/: REGRESSION_PROMPT.md
tests/unit/: test_accounts.py  test_cli.py  test_compose.py  test_delete.py  test_doctor.py  test_drafts_edit.py  test_engine.py  test_error_polish.py  test_mailboxes.py  test_mark_move.py  test_messages.py  test_reads_sqlite.py  test_reply_forward.py  test_safety_model.py  test_search.py  test_skill_drift.py
(+27 files in other folders)
