# Python packaging config for mailctl. Not harness-generated noise —
# required for `pipx install .` and `pip install -e .`. The harness
# commit prefix only reflects who authored the initial scaffold; the
# contents (build backend, deps, `mailctl` entry point) are what make
# the tool installable.

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailctl"
version = "0.1.0"
description = "A command-line interface for Apple Mail.app on macOS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
mailctl = "mailctl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require Mail.app (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
